Adicionando site para agenciat

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </section>
 
   <section>
-    <h2>Projeto</h2>
+    <h2>Projetos</h2>
     <div class="projects">
       <div class="project-card">
         <h3>⚖️ Site para escritório de advocacia</h3>
